@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.69
+	- Fix crash caused by Wx::PlThreadEvent.
 
 0.68  Sat Mar 10 21:45:26 CET 2007
 	- Added wxSystemOptions (thanks to Mark Dootson).
